[gd_scene load_steps=5 format=3 uid="uid://c4kbdthg225cn"]

[ext_resource type="Script" uid="uid://bnwh8l4wfp43n" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://bg53v1jjfr714" path="res://scenes/gun_base.tscn" id="2_qhqgy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dqkch"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qlg0r"]

[node name="player" type="CharacterBody3D" groups=["player"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_g2els")

[node name="hitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_dqkch")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_qlg0r")

[node name="camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="hitscanRaycast" type="RayCast3D" parent="camera"]
target_position = Vector3(0, 0, -100)
collision_mask = 3

[node name="lookDirectionHint" type="Node3D" parent="camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50)

[node name="viewmodelBasePoint" type="Node3D" parent="camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.5, -0.9)

[node name="viewmodelEditPoint" type="Node3D" parent="camera"]
transform = Transform3D(0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, 0.258819, 0.6, -0.0999999, -0.7)

[node name="viewModel" type="Node3D" parent="camera"]
transform = Transform3D(0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, 0.258819, 0, -2.5, 0)

[node name="projectileSpawnPoint" type="Node3D" parent="camera/viewModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.8)

[node name="gun_base" parent="camera/viewModel" instance=ExtResource("2_qhqgy")]
grip_length = 0.2
slot_area_length = 0.7
